<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_height="wrap_content"
                android:layout_width = "match_parent"
                android:gravity="right"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wcs_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wcs_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/wcs_url" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/connect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_connect"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/publish_stream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_publish_stream"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_publish_name" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/publish_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/publish_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_publish"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5">

                    <EditText
                        android:id="@+id/stream_data"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/prompt_stream_data"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/stream_data" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/send_data_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:text="@string/action_send"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/json_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:text="@string/not_valid_json"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/play_stream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_play_stream"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_play_name" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/play_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/play_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/action_play"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/available_stream_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:enabled="false"
                    android:text="@string/available_stream"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/available_stream_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/available_stream_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_received_data"
                android:textColor="@color/gray"
                />

            <TextView
                android:id="@+id/received_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:baselineAligned="false">

                <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                    android:id="@+id/local_video_layout"
                    android:layout_width="0dip"
                    android:layout_height="200dp"
                    android:layout_weight=".5">

                    <org.webrtc.SurfaceViewRenderer
                        android:id="@+id/local_video_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>

                <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                    android:id="@+id/remote_video_layout"
                    android:layout_width="0dip"
                    android:layout_height="200dp"
                    android:layout_weight=".5">

                    <org.webrtc.SurfaceViewRenderer
                        android:id="@+id/remote_video_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>
